# gpopt

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  pyproject.toml
benchmarks/: datasets.py  logging_utils.py  run_benchmarks.py  test_1.py  test_2.py  test_3.py
benchmarks/deap/: run.py
benchmarks/gplearn/: run.py
benchmarks/gpopt/: run.py
benchmarks/naive/: run.py
benchmarks/tensorgp/: run.py
